# DiffTSR

./: environment.yaml  pyproject.toml  setup.py
.github/workflows/: main.yml
