[build-system]
requires = ["setuptools>=60.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DiffTSR"
version = "0.0.1"
description = "A tool for super-resolution tasks"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "torch",
    "numpy",
    "tqdm",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]
